src/examples/should_fail/lowercase_nonterminal_variant_name.kiki
start Epsilon

enum Epsilon {
    empty
}

terminal Token {
    $BoolLit: bool
}
